src/objects/Due_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Due_Fee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Due Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Due Fees</relationshipLabel>
        <relationshipName>Due_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repayment_Schedule__c</fullName>
        <label>Repayment Schedule</label>
        <referenceTo>Repayment_Schedule__c</referenceTo>
        <relationshipLabel>Due Fees</relationshipLabel>
        <relationshipName>Due_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Due Fee</label>
    <nameField>
        <displayFormat>DFID-{0000000000}</displayFormat>
        <label>Due Fee  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>